--- a/Uts-stmik-mapan/pemograman.html
+++ b/Uts-stmik-mapan/pemograman.html
@@ -22,21 +22,46 @@
         
         <center>
     <h2>Halaman Pemrograman</h2>
-    <h3>Pilih Bahasa Pemograman Yang Kamu Sukai</h3>
+    <h3>Tabel Bahasa Pemograman</h3>
 
-    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-    <label for="vehicle1">HTML</label><br>
+<table>
+    <tr>
+        <th>No</th>
+        <th>Bahasa Pemograman</th>
+        <th>Pencipta</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>PHP</td>
+        <td>Rasmus Lerdorf</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>JavaScript</td>
+        <td>Brendan Eich</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Python</td>
+        <td>Guido Van Rossum</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Java</td>
+        <td>James Gosling</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>C++</td>
+        <td>Dennis Ritchie</td>
+    </tr>
+</table>
 
-    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-    <label for="vehicle1">CSS</label><br>
+<br />
+<br />
+<br />
 
-    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-    <label for="vehicle1">Javascript</label><br>
-
-    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-    <label for="vehicle1">PHP</label><br>
-    </center>
-
+<br />
        <footer>
         Copyright 2022 <b>STMK MASA DEPAN</b>
        </footer>
